k8s/aci_connector.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  labels:
    app: myaciconnector-linux-virtual-kubelet-for-aks
  name: myaciconnector-linux-virtual-kubelet-for-aks
  namespace: default
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: myaciconnector-linux-virtual-kubelet-for-aks
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
    type: RollingUpdate
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: myaciconnector-linux-virtual-kubelet-for-aks
    spec:
      containers:
      - args:
        - --provider
        - azure
        - --namespace
        - default
        - --nodename
        - virtual-kubelet-myaciconnector-linux
        - --os
        - Linux
        command:
        - virtual-kubelet
        image: microsoft/virtual-kubelet:latest
        imagePullPolicy: Always
        name: myaciconnector-linux-virtual-kubelet-for-aks
        resources: {}
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
        volumeMounts:
        - mountPath: /etc/acs/azure.json
          name: acs-credential
      dnsPolicy: ClusterFirst
      nodeSelector:
        beta.kubernetes.io/os: linux
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
      volumes:
      - hostPath:
          path: /etc/kubernetes/azure.json
          type: File
        name: acs-credential
